# PLC_IDE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Ladder NOtes  add_version.cmake
.cache/clangd/index/: Basics.cpp.1F77BC68E563F081.idx  EditorBase.hpp.81E04571A359CD70.idx  EditorDut.hpp.8BCA47F2578760FA.idx  EditorPou.hpp.04DFABF42DCA8CDA.idx  EditorPouLadder.cpp.1939E7CA8E40E391.idx  EditorPouLadder.hpp.0DEBF4A52B5E682D.idx  EditorPouLadderCommands.hpp.F233A3E16365713B.idx  EditorTextFile.hpp.93E1661CFF7D8232.idx  Graphs.cpp.2571B27E8C20440D.idx  IecProject.cpp.49071E9590550DC9.idx  IecProject.hpp.A654E57A2BA77EBB.idx  LadderElement.cpp.19941E7F9402FFCC.idx  LadderElement.hpp.8214B69C94D84E2A.idx  LadderRung.hpp.C3F2980F5D0A4404.idx  MainWindow.cpp.642BCF8B637F3A22.idx  Object.cpp.A624066F936DC0EC.idx  Object.hpp.90AC2E8F0D6A9506.idx  TextEditor.cpp.66DCBEE716A2EEB3.idx  TextEditor.h.2326D41B854BD4BD.idx  UI_Icons.h.CD190A0DF43D3F8F.idx  UI_MainGL.cpp.ABA71750B0266DB1.idx  UI_Style.cpp.E311671EB497BA7B.idx  UI_Style.h.72C3CA75550409AF.idx  UI_Widgets.h.519D825BE145BA19.idx  UI_Windows.h.789A90057F17F736.idx  WjCryptLib_Sha256.c.CEE73C45FE551447.idx  WjCryptLib_Sha256.h.6328C69C2714E78E.idx  cJSON.c.8B9233627617E5B0.idx  cJSON.h.B318D69C25E1EA8E.idx  clip.cpp.30C2B8C968FE5D31.idx  clip.h.3FC215C2603E04BD.idx  clip_lock_impl.h.ECEE8A7FC7020CB7.idx  clip_x11.cpp.C81DB82809102AF9.idx  clip_x11_png.h.D3FBBB83DFB8C4E4.idx  dirent.h.462719735CA92638.idx  endianness.h.5E7FCD78BA84B5C9.idx  font_resources.h.C4BF3D9A073D451C.idx  freetype.h.8963877D9A9E7610.idx  ft2build.h.FC6AC8780A2C78DC.idx  ftconfig.h.E3122F3A17157D18.idx  (+52 more)
assets/Fonts/: font_resources.h
assets/Fonts/icofont/: demo.html  icofont.css  icofont.min.css
assets/Fonts/icofont/fonts/: icofont.eot
assets/Images/: file_to_c_arrya.py  image_resources.h
lib/: log.c  log.h  os_generic.h  queue.c  queue.h  socket_generic.h  standartypes.h
src/: RESOURCES.rc  UI_Icons.h  UI_MainGL.cpp  UI_Style.cpp  UI_Style.h  version.h
src/Core/: IecProject.cpp  IecProject.hpp  Object.cpp  Object.hpp  ui_core.cpp  ui_core.hpp
src/Editors/: EditorBase.hpp  EditorDut.hpp  EditorPou.hpp  EditorPouLadder.cpp  EditorPouLadder.hpp  EditorPouLadderCommands.hpp  EditorTextFile.hpp
src/Widgets/: Basics.cpp  Graphs.cpp  LadderElement.cpp  LadderElement.hpp  LadderRung.hpp  TextEditor.cpp  TextEditor.h  UI_Widgets.h
src/Windows/: MainWindow.cpp  UI_Windows.h
tools/cmake_tools/munkei-cmake/: MunkeiTags.cmake
